--- a/thorsten.css
+++ b/thorsten.css
@@ -249,6 +249,7 @@ color: #333;
 font-size: 11px;
 text-align: left;
 line-height: 11px;
+padding: 0px;
 }
 
 div.content .view-flag-termin-teilnahme .view-footer {
