--- a/update.css
+++ b/update.css
@@ -401,6 +401,15 @@ div.node .field .field-label-inline-first {
   margin: 0 10px 5px 0;
 }
 
+div.node .field .field-label-inline {
+  font-size: 10px;
+  padding: 0px 5px;
+  width: 150px !important;
+  display: block;
+  float: left;
+  margin: 0 10px 5px 0;
+}
+
 
 .page-dashboard .view-content .node .field {
   padding-bottom: 4px !important; 
