--- a/thorsten.css
+++ b/thorsten.css
@@ -279,4 +279,14 @@ div.content a.flag-link-normal {
   display: none !important;
 }
 
+/* --- hides descriptive text for drop zone due to translation incompatibility --- */
+div.drop-zone p {
+  display: none;
+}
+div.drop-zone:after {
+  display: block;
+  font-size: 11.2px;
+  line-height: 14.8px;
+  content: "Sie können Datein hier per Drag & Drop ablegen.";
+}
 
