--- a/thorsten.css
+++ b/thorsten.css
@@ -143,7 +143,7 @@ input[value="Speichern"]:hover {
 
 
 #page-tools .tabs #block-menu-features.block ul.menu li a.active_trail {
-    background: none repeat scroll 0 0 #7E2B97 !important;    
+    /* background: none repeat scroll 0 0 #7E2B97 !important; */
     color: #FFFFFF !important;
     text-shadow: none;
     -webkit-border-radius: 0px;
