--- a/thorsten.css
+++ b/thorsten.css
@@ -183,7 +183,7 @@ div.content .field-type-content-taxonomy ul {
 }
 
 .node div.content ul.links {
-  display: table-row-group !important;
+ /* display: table-row-group !important; */
 }
 
 /* --------------- Module flags ----------------------------------- */
