--- a/thorsten.css
+++ b/thorsten.css
@@ -50,16 +50,17 @@
 .node .links .comment_forbidden span { font-size: 10px; }
 
 /* ----- entries: divider between link-Elements (#280) ----- */
-.node .links .upload_attachments > a:after { content: " | "; }
-.node .links .upload_attachments > a:after { content: " | "; }
-.node .links .comment_add > a:after { content: " |"; }
-.node .links .comment_new_comments  > a:after { content: " |"; }
-.node .links .comment_comments  > a:after { content: " |"; }
-.node .links .comment_forbidden > span:after  { content: " |"; }
+.node .links .upload_attachments > a:before { content: " | "; }
+.node .links .upload_attachments > a:before { content: " | "; }
+.node .links .comment_add > a:before { content: " | "; }
+.node .links .comment_new_comments  > a:before { content: " | "; }
+.node .links .comment_comments  > a:before { content: " | "; }
+/* comment_forbidden analog, ist aber wengen linkfarbe in node.tpl.php als hardcoded geloest */
+.node .links .node_read_more > a:before { content: " | "; } 
 /* ---- hide flags link under blog -------- */
 .node .links .flag-eventteilnahme { display: none; }
 /* ------ Blog: Hide of New Comments ----- */
-.node-blog .links .comment_add > a { display:none; }
+/*.node-blog .links .comment_add > a { display:none; } */
 
 
 
