page footer bug

--- a/thorsten.css
+++ b/thorsten.css
@@ -293,3 +293,10 @@ div.drop-zone:after {
   content: "Sie können Datein hier per Drag & Drop ablegen.";
 }
 
+
+/* ------------ page numbers footer ----------- */
+.pager li a.active {
+    font-size: 12px !important;
+    padding-left: 12px;
+    padding-right: 12px;
+}
