--- a/thorsten.css
+++ b/thorsten.css
@@ -55,6 +55,8 @@
 .node .links .comment_add > a:before { content: " | "; }
 .node .links .comment_new_comments  > a:before { content: " | "; }
 .node .links .comment_comments  > a:before { content: " | "; }
+/* ------ Blog: Hide of print link according #385----- */
+.node .links .print { display: none; }
 /* comment_forbidden analog, ist aber wengen linkfarbe in node.tpl.php als hardcoded geloest */
 .node .links .node_read_more > a:before { content: " | "; } 
 /* ---- hide flags link under blog -------- */
