refs #384 line height of p.og-description set to 19.8 like elsewhere on the project description page

--- a/thorsten.css
+++ b/thorsten.css
@@ -309,3 +309,8 @@ div.drop-zone:after {
 padding: 0px;
 }
 
+
+/* ----------- refs #384 line height zu klein fuer proj ueberschriften ------ */
+div.page-tools p.og-description {
+  line-height: 19.8px !important;
+}
