refs #384 line height of p.og-description set to 19.8 like elsewhere on the project description page3

--- a/thorsten.css
+++ b/thorsten.css
@@ -311,6 +311,6 @@ padding: 0px;
 
 
 /* ----------- refs #384 line height zu klein fuer proj ueberschriften ------ */
-#page-tools p.og-description {
+.og-context #page-tools .og-description {
   line-height: 19.8px !important;
 }
