--- a/thorsten.css
+++ b/thorsten.css
@@ -4,6 +4,8 @@
  *        CSS-Changes Thorsten        *
  **************************************/
 
+/* Test-Input */
+
 /* =========== OVERALL-STYLES ========== */
 /* ----- Headlines H3 ----- */
 #content h3 a:hover { color: #7E2B99; }
