--- a/thorsten.css
+++ b/thorsten.css
@@ -1,5 +1,7 @@
 /* =============================================== CHANGES THORSTEN & PHILIPP ======================================== */
 
+/* sdfsdfs d */
+
 /**************************************
  *        CSS-Changes Thorsten        *
  **************************************/
