--- a/custom.css
+++ b/custom.css
@@ -1749,13 +1749,16 @@ body #header .block-widget .block-content {
     color: white;
 }
 
- body #header .block .block-title, body #space-tools .block-title {
+body #space-tools .block-title { background: transparent; border: none;}
+
+body #header .block-widget .block-content,
+body #header .block .block-title { background: transparent; border: none;}
+
+body #header .block .block-title, body #space-tools .block-title {
     font-size: 11px;
     font-weight: bold;
     color: black;
     margin-left: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
 }
 
 body #header .block .block-title {
@@ -1886,10 +1889,15 @@ h2.node-title {
 }
 
 body #space-tools .block-title, body #header .block-widget .block-content, body #header .block .block-title{
-	background: transparent !important;
-	color: black !important;
+	background: transparent;
+	color: black;
 	font-size: 11px;
-
+  -webkit-border-top-left-radius: 3px;
+  -webkit-border-top-right-radius: 3px;
+  -moz-border-radius-topleft: 3px;
+  -moz-border-radius-topright: 3px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
 }
 
 .dropdown-blocks .block .block-title {
