--- a/thorsten.css
+++ b/thorsten.css
@@ -336,11 +336,11 @@ padding: 0px;
 }
 
 #footer {
-	background-color: #4e2158;
+	background-color: #441a4d;
 }
 
 #footer #block-block-5{			/*Verlaufsbild oberhalb*/
-	background: (#4E2158) url("/sites/dlr.wi1projects.com/files/u940/footer_verlauf.jpg") repeat-x scroll 0 0;	/*<--Adresse ändern*/
+	background: #441a4d url("img/footer_verlauf.jpg") repeat-x scroll 0 0;	/*<--Adresse ändern*/
 	padding-top: 18px;		
 }
 
@@ -360,7 +360,7 @@ padding: 0px;
 }
 
 #block-boxes-foerderleiste{		
-	background-color: #4E2158;
+	background-color: #441a4d;
 	padding-bottom: 15px;
 }
 
