--- a/thorsten.css
+++ b/thorsten.css
@@ -388,3 +388,8 @@ padding: 0px;
   color: black !important;
   text-decoration: underline !important;
 }
+
+div.view-content h2.node-title {
+  border: none !important;
+}
+
