--- a/thorsten.css
+++ b/thorsten.css
@@ -332,7 +332,7 @@ padding: 0px;
 
 #footer p { 		
 	color: #FFFFFF;
-	font-size: 11pt;
+	font-size: 12px;
 }
 
 #footer {
@@ -340,8 +340,9 @@ padding: 0px;
 }
 
 #footer #block-block-5{			/*Verlaufsbild oberhalb*/
-	background: #441a4d url("img/footer_verlauf.jpg") repeat-x scroll 0 0;	/*<--Adresse ändern*/
-	padding-top: 18px;		
+	background: #84389C url("img/footer_verlauf.jpg") repeat-x scroll 0 0;	/*<--Adresse ändern*/
+	padding-top: 18px;
+	border-radius: 0;		
 }
 
 #footer #block-block-5 a {   
@@ -360,7 +361,7 @@ padding: 0px;
 }
 
 #block-boxes-foerderleiste{		
-	background-color: #441a4d;
+	background-color: #84389C;
 	padding-bottom: 15px;
 }
 
@@ -387,4 +388,17 @@ padding: 0px;
 #loginlink a:hover {
   color: black !important;
   text-decoration: underline !important;
+}
+
+/*Termine lila Hintergrund*/
+.page-region .cols-3 thead th {
+background-color: #84389C;
+color: #fff;
+border-bottom: none;
+border-top: none;
+}
+
+/*Devel*/
+#block-admin-devel {
+border-radius: 0;
 }
