--- a/thorsten.css
+++ b/thorsten.css
@@ -408,7 +408,7 @@ div.view-content h2.node-title {
   border: none !important;
 }
 
-#space-tools .block .block-content {
+#space-tools block-views-dlr_focusgroups-block_1 .block .block-content {
 	background-color: transparent !important;	
 }
 
