--- a/thorsten.css
+++ b/thorsten.css
@@ -409,7 +409,7 @@ div.view-content h2.node-title {
 }
 
 #space-tools .block-views-dlr_focusgroups-block_1 .block-widget .block-content {
-	background-color: transparent !important;	
+	background-color: transparent;
 }
 
 #space-tools .field_projectlogo_fid img {
