--- a/thorsten.css
+++ b/thorsten.css
@@ -408,11 +408,15 @@ div.view-content h2.node-title {
   border: none !important;
 }
 
-#space-tools .block-views-dlr_focusgroups-block_1 .block-widget .block-content {
+#space-tools .block-widget .block-content {
 	background-color: transparent;
 }
 
 #space-tools .field_projectlogo_fid img {
   padding-left: 3px;
   padding-right: 3px;
+}
+
+.dropdown-blocks .block-toggle .block-content {
+  background: #F8F8F8 !important;
 }
