kleine verschiebung fuer account-links dass sie mit icons auf einer hoehe sitzen

--- a/style.css
+++ b/style.css
@@ -490,6 +490,13 @@ span.feature-atrium_home { background-position:-120px 100%; }
 span.feature-atrium_members { background-position:-140px 100%; }
 span.feature-atrium_shoutbox { background-position:-160px 100%; }
 
+
+/*Minimale anpassung dass kleine fg logos auf selber hoehe wie account-links*/
+#block-atrium-account { margin-top: 2px; }
+#block-atrium-create { margin-top: 2px; }
+#block-atrium-admin_links { margin-top: 2px; }
+#block-atrium-account { margin-top: 2px; }
+
 #block-atrium-admin_links span.icon { background:url(images/sprite_icons.png) -20px -420px no-repeat; }
 #block-atrium-admin_links .toggle-active span.icon { background-position:-20px -400px; }
 #block-atrium-create span.icon { background:url(images/sprite_icons.png) 0px -420px no-repeat; }
