--- a/custom.css
+++ b/custom.css
@@ -1099,6 +1099,7 @@ padding: 0;
 
 #footer .limiter {
 	padding: 0;
+	background-color: #84389C;
 }
 
 #footer .block-content {
@@ -2238,20 +2239,31 @@ display: none;
   border-collapse: separate;
 }
 .block-content .view-event-listing td.views-field-title {
-  padding: 0 0 0 4px;
+  /*padding: 0 0 0 4px; VORHER*/
+  padding: 10px 0 0 7px;
   border-bottom: 10px solid #fff;
+  display: inline;
+  float: left;
 }
 
 .block-content .view-event-listing td.views-field-date {
-  width: 50px;
-  border-right: 1px solid #ccc;
-  padding: 0 6px 0 0;
+  /*width: 50px;*/
+  /*border-right: 1px solid #ccc;*/
+  /*padding: 0 6px 0 0; VORHER*/
+  padding: 2px 191px 2px 5px;
   border-bottom: 10px solid #fff;
+  background-color: #84389C;
+  display: inline;
 }
 
 .block-content .view-event-listing .date-display-end {
-  display: block;
+  display: inline; /* Vorher block */
   clear: both;
+}
+
+/*****NEU links view-ebent-listing *******/
+#block-views-event_listing-block_1 .views-field-date a {
+color: white;
 }
 
 /* latest events on event page */
