--- a/custom.css
+++ b/custom.css
@@ -369,7 +369,7 @@ div.content .field-type-content-taxonomy ul li:last-child:after {
 /****************************/
 
  .og-context #page-tools .page-title, .og-context #page-tools .og-description {
-    width: 700px;
+    width: 840px;
     float: left;
     }
    
@@ -383,9 +383,22 @@ div.content .field-type-content-taxonomy ul li:last-child:after {
  
 
 .og-context #page-tools .group-logo {
- margin-top: -50px;
- float: left;
+   margin-top: -90px;
+   float: left;
+   margin-bottom: 30px;
+   margin-left: -25px;
 }
+
+.og-context #page-tools .og-description {
+  float: left;
+  margin-left: 120px;
+}
+
+.og-context #page-tools .page-title {
+  float: left;
+  margin-left: 120px;
+}
+
 
 /*****************************/
 /*   Content                */
