Fixed node title on Page "Projekte > Bloginfo"

--- a/update.css
+++ b/update.css
@@ -112,7 +112,7 @@ input, select, textarea, body {
 	} /*changed to no hover effect*/
 	
 	/* Page Title */
-	#page-tools .page-title, #page .node-title, #context-block-region-content .node-title { 
+	#page-tools .page-title { 
 		height: auto !important;
 		font-size: 18px; 
 		font-weight: bold;
