--- a/custom.css
+++ b/custom.css
@@ -2203,13 +2203,14 @@ div.litecal .litecal-header {
 }
 
 div.litecal .litecal-slot .label:hover span {
-    background: #d6d6d6 !important;
+    background: #999 !important;
     color: black !important;
 }
 
 div.litecal .litecal-slot .label span.add {
   display: none;
   padding: 0px;
+  border: 0px !important;
 }
 
 div.litecal .litecal-header .litecal-label {
