--- a/custom.css
+++ b/custom.css
@@ -2212,6 +2212,7 @@ div.litecal .litecal-slot .label span.add {
   padding: 0px;
   border: 0px !important;
   background-color: #d6d6d6;
+  font-size: 10px !important;
 }
 
 div.litecal .litecal-header .litecal-label {
