--- a/thorsten.css
+++ b/thorsten.css
@@ -140,6 +140,11 @@ input[value="Speichern"]:hover {
 .page-user #page-tools #secondary-tabs li a.active { text-decoration: underline; }
 
 /* ===== efs 302 aufklappen und schlissen von collapsibles ===== */
+.page-content .content fieldset.collapsible legend a,
+.page-content .content fieldset.collapsible.collapsed legend a {
+    color: #84389C; /* TBS-CHANGE2013 */
+    font-weight: 800; /* TBS-CHANGE2013 */
+}
 .page-content .content fieldset.collapsible.collapsed legend a { display:inline-block; }
 .page-content .content fieldset.collapsible.collapsed legend a:after { content: " [+] "; }
 .page-content .content fieldset.collapsible legend a { display:inline-block; }
