--- a/update.css
+++ b/update.css
@@ -128,6 +128,7 @@ input, select, textarea, body {
 
   #page .view-content h2.node-title, #context-block-region-content .view-content h2.node-title { 
   	text-transform: none; 
+  	margin-bottom: 10px; /* TBS-CHANGE2013 */
   	font-size: 22px; /* TBS-CHANGE2013 */
   }
   #page .view-content h2.node-title a, #context-block-region-content .view-content h2.node-title a { 
