--- a/thorsten.css
+++ b/thorsten.css
@@ -460,3 +460,7 @@ background-color: #ffffff;
 padding-left: 20px;
 }
 
+/* header correction, just group admin sees it.*/
+#block-domain_admin-0 {
+  margin-top: 3px;
+}
