--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
  * elements. For core/canvas elements, see ginkgo.css.
  */
 
+ body { background-color: red !important;}
+ 
+ 
 body.tao,
 input,
 textarea,
